# hmpy

./: LICENSE  README.md  pyproject.toml
src/hmpy/: __init__.py  console.py
tests/: test_console.py
