[tool.poetry]
name = "hmpy"
version = "0.1.0"
description = "Walkthrough of Claudio Jolowicz's Hypermodern Python tutorial"
authors = ["Bert Van Vreckem <bert.vanvreckem@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bertvv/hmpy"
repository = "https://github.com/bertvv/hmpy"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hmpy = "hmpy.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

